--- a/msc/index.html
+++ b/msc/index.html
@@ -2,20 +2,7 @@
 <html lang="en">
 <head>
     <title>Minecraft Seed Converter</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        input, button {
-            font-size: 16px;
-            padding: 10px;
-        }
-        #output {
-            margin-top: 20px;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Minecraft Seed Converter</h1>
