--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To Sticklabs!</title>
     <script src="dswr.js"></script>
 </head>
 <body>
     <h1>Welcome To Sticklabs!</h1>
-    <p>This part isn't even finished...</p>
+    <img src="img/default.gif">.
 
     <h2>Time Elapsed Since The Website Was Made</h2>
     <p id="timeElapsed">Loading...</p>
