--- a/bgtt.html
+++ b/bgtt.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Game Tech Test</title>
+    <title>Three Block</title>
+    <h1>Three Block 24/12/19</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
         body { margin: 0; }
